--- a/style/header.css
+++ b/style/header.css
@@ -1,17 +1,26 @@
 .header {
     background: #fff;
 }
+
 /*  */
+
 .nav {
     display: flex;
+    justify-content: space-between;
     width: 100%;
 }
 
-.nav-text {
+.nav-text, .nav-link {
     color: #9d9d9d;
     font-size: 13px;
 }
+
+.nav-item:not(:last-child) {
+    margin-right: 25px;
+}
+
 /*  */
+
 .brand-layout {
     display: flex;
     justify-content: flex-start;
@@ -31,6 +40,7 @@
 }
 
 /*  */
+
 .menu-layout {
     display: flex;
     justify-content: center;
@@ -56,14 +66,23 @@
     background: #fff;
 }
 
+.authorization-text {
+    line-height: 15px;
+    font-size: 13px;
+    font-weight: 400;
+    color: #9d9d9d;
+}
+
 .search-icon {
+    height: 20px;
     color: #000;
 }
 
 .basket-icon {
-    width: 22px;
+    width: 20px;
     height: 20px;
-    background: url("../images/logo/shopping-basket.svg") no-repeat;
+    background: url("../images/logo/shopping-basket.svg") center no-repeat;
+    background-size: contain;
 }
 
 
@@ -74,4 +93,29 @@
 
 .navbar-collapse {
     flex-grow: 0;
+}
+
+#mobileMenu {
+    width: 20px;
+    height: 17px;
+    background-image: url('../images/logo/mobile-menu-icon.svg') !important;
+}
+
+.navbar-toggler {
+    padding: 0;
+}
+
+.navbar-light .navbar-toggler {
+    font-size: 0;
+    border: none;
+}
+
+@media screen and (max-width: 992px) {
+    .header {
+        box-shadow: 0 4px 12px 0 rgba(0, 0, 0, 0.05); 
+    }
+
+    .navbar-brand {
+        margin-right: 0;
+    }
 }
