--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Roboto&display=swap');
 @import url('../style/core.css');
+@import url('../style/text.css');
 @import url('../style/header.css');
-/* @import url('../style/section-first.css'); */
+@import url('../style/authenticity.css');
 @import url('../style/footer.css');
 @import url('../style/intro.css');
+@import url('../style/sections.css');
+
 
 
