update homepage by implemeting animations & hover effects

--- a/style/footer.css
+++ b/style/footer.css
@@ -21,6 +21,10 @@
 
 /* Стилизация меню футера */
 
+.footer-menu {
+    padding: 0;
+}
+
 .footer-nav {
     display: flex;
     justify-content: center;
