--- a/style/text.css
+++ b/style/text.css
@@ -109,9 +109,9 @@
     background-color: #0b0b0b;
     cursor: pointer;
     border: 0;
-    -webkit-transition: all .5s ease-out;
-    -o-transition: all .5s ease-out;
-    transition: all .5s ease-out;
+    -webkit-transition: all .3s ease;
+    -o-transition: all .3s ease;
+    transition: all .3s ease;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
@@ -119,7 +119,8 @@
 .infinite-button:hover {
     color: #0b0b0b;
     background-color: #ffffff;
-    outline: 1px solid #0b0b0b;
+    /* outline: 1px solid #0b0b0b; */
+    box-shadow: inset 0px 0px 1px 0px;
 }
 
 .button-white {
