--- a/style/core.css
+++ b/style/core.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Roboto&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -5,7 +7,9 @@
 
 html,
 header {
-    background: rgb(250, 250, 250);
+    background-color: #fff;
+    scroll-behavior: smooth;
+    -webkit-overflow-scrolling: touch;
 }
 
 body {
@@ -16,17 +20,16 @@ body {
 main {
     position: relative;
     z-index: 10;
-    margin-top: 95px;
+    /* margin-top: 95px; */
 }
 
 a {
     text-decoration: none !important;
 }
 
-/* a:hover,
-a:focus {
-    color: #e74c3c;
-} */
+header a {
+    transition: all .3s ease;
+}
 
 .container {
     padding: 0 25px;
@@ -68,3 +71,23 @@ button {
 ::-ms-input-placeholder { /* Microsoft Edge */ 
     color: #7e7e7e;
 } 
+
+.current-link {
+    position: relative;
+    transition: all .3s ease;
+}
+
+.current-link:before {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 0%;
+    right: 0%;
+    content: '';
+    height: 1px;
+    background-color: #7e7e7e;
+}
+
+.current-link:hover:before {
+    background-color: #0b0b0b;
+}
