--- a/style/ways-to-rent.css
+++ b/style/ways-to-rent.css
@@ -107,118 +107,56 @@
     
 */
 
-/* rent-action */
+/* Rent Works */
 
-.rent-action {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 70px 25px;
-    text-align: center;
-    border-top: 1px solid #e2e2e2;
-}
-
-.rent-small-text {
-    display: block;
-    margin: 15px 0 30px;
-}
-
-
-
-/* Rent Perk */
-
-.rent-perks {
+.rent-works {
     display: grid;
-    grid-template-columns: minmax(420px, 500px) max-content;
-    grid-template-rows: 57px 380px;
-    grid-column-gap: 50px;
-    justify-content: center;
-    align-content: center;
+    grid-template-columns: repeat(3, calc(100% / 3));
+    grid-template-rows: 98px max-content;
     padding: 70px 25px;
 }
 
-.grid-title {
-    grid-column: 1 / 3;
+.works-title {
+    grid-column: 1 / 4;
     grid-row: 1 / 2;
     text-align: center;
 }
 
-.rent-perks-image {
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
-    transform: rotate(15deg) translateY(25%);
+.rent-works-item {
+    padding: 0 10px;
 }
 
-.rent-list {
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
-    display: flex;
-    flex-direction: column;
-    align-items: baseline;
-    justify-content: center;
+.works-header {
+    margin-bottom: 35px;
 }
 
-.rent-list li {
-    margin: 5px 0;
-}
-
-@media screen and (max-width: 700px) {
-    .rent-perks {
-        grid-template-columns: minmax(320px, calc(100vw - 50px));
-        grid-template-rows: 57px 380px max-content;
+@media screen and (max-width: 768px) {
+    .rent-works {
+        grid-template-columns: 1fr;
+        grid-template-rows: 98px repeat(3, max-content);
     }
 
-    .grid-title {
-        grid-column: 1 / 2;
-        grid-row: 1 / 2;
-    }
-
-
-    .rent-perks-image {
-        grid-column: 1 / 2;
+    .rent-works-item:first-of-type {
         grid-row: 2 / 3;
     }
 
-    .rent-list {
-        grid-column: 1 / 2;
+    .rent-works-item:nth-of-type(2) {
         grid-row: 3 / 4;
-        margin: 0 auto;
-    }
-}
-
-@media screen and (max-width: 460px) {
-    .rent-perks {
-        grid-template-columns: minmax(320px, calc(100vw - 50px));
-        grid-template-rows: 57px 300px max-content;
+        padding-top: 35px;
     }
 
-    .rent-perks-image {
-        grid-column: 1 / 2;
-        grid-row: 2 / 3;
+    .rent-works-item:nth-of-type(3) {
+        grid-row: 4 / 5;
+        padding-top: 35px;
     }
 }
-
-
-/* Rent Exclusives */
-
-.rent-exclusives {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    padding: 75px 0;
-}
-
-
 
 /* Rent Ways */
 
 .rent-ways {
     display: grid;
     grid-template-columns: minmax(320px, 1fr);
-    grid-template-rows: 100px 1fr;
+    grid-template-rows: 98px 1fr;
     justify-content: center;
     align-content: center;
 }
@@ -231,7 +169,6 @@
 
 .rent-table {
     width: 100%;
-    /* margin: 70px 0; */
     text-align: center;
 }
 
@@ -280,4 +217,107 @@ td {
     .rent-table {
         min-width: 800px;
     }
+}
+
+/* rent-action */
+
+.rent-action {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 70px 25px;
+    text-align: center;
+    border-top: 1px solid #e2e2e2;
+}
+
+.rent-small-text {
+    display: block;
+    margin: 15px 0 30px;
+}
+
+/* Rent Perk */
+
+.rent-perks {
+    display: grid;
+    grid-template-columns: minmax(420px, 500px) max-content;
+    grid-template-rows: 98px 380px;
+    grid-column-gap: 50px;
+    justify-content: center;
+    align-content: center;
+    padding: 70px 25px;
+}
+
+.grid-title {
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+    text-align: center;
+}
+
+.rent-perks-image {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    transform: rotate(15deg) translateY(25%);
+}
+
+.rent-list {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    justify-content: center;
+    font-weight: 500;
+    font-size: 18px;
+}
+
+.rent-list li {
+    margin: 5px 0;
+}
+
+@media screen and (max-width: 700px) {
+    .rent-perks {
+        grid-template-columns: minmax(320px, calc(100vw - 50px));
+        grid-template-rows: 140px 380px max-content;
+    }
+
+    .grid-title {
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+    }
+
+
+    .rent-perks-image {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+    }
+
+    .rent-list {
+        grid-column: 1 / 2;
+        grid-row: 3 / 4;
+        margin: 0 auto;
+    }
+}
+
+@media screen and (max-width: 460px) {
+    .rent-perks {
+        grid-template-columns: minmax(320px, calc(100vw - 50px));
+        grid-template-rows: 140px 350px max-content;
+    }
+
+    .rent-perks-image {
+        grid-column: 1 / 2;
+        grid-row: 2 / 3;
+    }
+}
+
+/* Rent Exclusives */
+
+.rent-exclusives {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 0 0 75px 0;
 }
