--- a/style/style.css
+++ b/style/style.css
@@ -4,3 +4,4 @@
 @import url('../style/homepage.css');
 @import url('../style/authenticity-guarantee.css');
 @import url('../style/ways-to-rent.css');
+@import url('../style/cleaning.css');
