--- a/style/style.css
+++ b/style/style.css
@@ -5,3 +5,4 @@
 @import url('../style/authenticity-guarantee.css');
 @import url('../style/ways-to-rent.css');
 @import url('../style/cleaning.css');
+@import url('../style/login.css');
