--- a/style/cleaning.css
+++ b/style/cleaning.css
@@ -2,6 +2,8 @@
     margin-bottom: 50px;
 }
 
+/* Первая секция */
+
 .cleaning-banner {
     margin: 30px 0 0;
 }
@@ -21,6 +23,8 @@
     width: 100%;
     height: 540px;
 }
+
+/* Основной контент, описание этапов очистки */
 
 .cleaning-container {
     margin: 100px 0 0;
@@ -42,6 +46,7 @@
     margin-bottom: 13px;
 }
 
+/* Добавляем изображения */
 
 .cleaning-image {
     width: 100%;
