add search.html fix footer text issue when resizing to 992px - 1200px; add content to search.html and now it works fine; get some troubles with js search algorithm; update style.css;

--- a/style/style.css
+++ b/style/style.css
@@ -6,3 +6,4 @@
 @import url('../style/ways-to-rent.css');
 @import url('../style/cleaning.css');
 @import url('../style/login.css');
+@import url('../style/search.css');
