--- a/style/login.css
+++ b/style/login.css
@@ -31,7 +31,7 @@
     font-size: 10px;
 }
 
-.form-field{
+.form-field {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
@@ -113,7 +113,7 @@ small {
     position: absolute;
     top: 10%;
     left: 50%;
-    max-width: 320px;
+    width: 320px;
     transform: translate(-50%);
 }
 
@@ -123,12 +123,12 @@ small {
     border-left: 5px solid #0b0b0b;
     font-size: 13px;
     color: #7e7e7e;
-    box-shadow: 0 1px 3px rgba(0,0,0,.13);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, .13);
 }
 
 .lost-form {
     padding: 25px;
-    box-shadow: 0 1px 3px rgba(0,0,0,.13);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, .13);
 }
 
 .lost-button {
@@ -136,11 +136,21 @@ small {
     margin-bottom: 25px;
 }
 
-.lost-form  .form-text {
+.lost-form .form-text {
     color: #0b0b0b;
     font-size: 13px;
 }
 
-.lost-form  .form-text:hover {
+.lost-form .form-text:hover {
     color: #0b0b0ba4;
+}
+
+@media screen and (max-width: 576px) {
+    .container-center {
+        position: relative;
+        top: 0%;
+        left: 0%;
+        width: 320px;
+        transform: translate(0);
+    }
 }
