FAQ page functional add new animation on social links; faq html and css files are working;

--- a/style/style.css
+++ b/style/style.css
@@ -7,3 +7,4 @@
 @import url('../style/cleaning.css');
 @import url('../style/login.css');
 @import url('../style/search.css');
+@import url('../style/faq.css');
