Day 9. Browse and Fonts. add local fonts; add browse.html and .css; add custom datetimer; minor improvmets;

--- a/style/style.css
+++ b/style/style.css
@@ -8,3 +8,5 @@
 @import url('../style/login.css');
 @import url('../style/search.css');
 @import url('../style/faq.css');
+@import url('../style/fonts.css');
+@import url('../style/browse.css');
