--- a/style/text.css
+++ b/style/text.css
@@ -29,7 +29,7 @@
 
 .infinite-header-small {
     font-size: 18px;
-    font-weight: bolder;
+    font-weight: 700;
     text-transform: capitalize;
     color: #0b0b0b;
     font-family: "Roboto", sans-serif;
