--- a/style/core.css
+++ b/style/core.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Roboto:300,400,500,700,900&display=swap');
+/* @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,700,900|Roboto:300,400,500,700,900&display=swap'); */
 
 * {
     margin: 0;
