--- a/style/style.css
+++ b/style/style.css
@@ -10,3 +10,4 @@
 @import url('../style/faq.css');
 @import url('../style/fonts.css');
 @import url('../style/browse.css');
+@import url('../style/404.css');
