--- a/style/style.css
+++ b/style/style.css
@@ -11,3 +11,4 @@
 @import url('../style/fonts.css');
 @import url('../style/browse.css');
 @import url('../style/404.css');
+@import url('../style/example.css');
